se agrega V1 de la app genpass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-main></app-main>
+<div class="container">
+  <app-navbar></app-navbar>
+  <div class="container-fluid">
+    <app-panel></app-panel>
+  </div>
+  <app-footer></app-footer>
+</div>
