--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
-.example-spacer { 
-    flex: 1 1 auto; 
+html, body {
+    min-height: 100vh;
+    height: auto;
+    margin: 0;
   }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-a { color: inherit; }
