--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -3,8 +3,13 @@
         <div class="toolbar__logo-container">
             <img src="https://i.imgur.com/kJ00MaT.png" alt="Ecadem logo">
         </div>
-    
-        <p-splitButton icon="pi pi-users" [model]="this.items" styleClass="p-button-text p-button-lg  p-button-plain mr-2 mb-2"></p-splitButton>
+
+        <div styleClass="icons-container mr-2 mb-2">
+            <a href="https://www.linkedin.com/in/eduardovparga/" target=”_blank” class="pi pi-linkedin"></a>
+            <a href="https://ecadem.co/" target=”_blank” class="pi pi-globe"></a>
+            <a href="https://github.com/Ecadem" target=”_blank” class="pi pi-github"></a>
+        </div>
+        <!-- <p-splitButton icon="pi pi-users" [model]="this.items" styleClass="p-button-text p-button-lg  p-button-plain mr-2 mb-2"></p-splitButton> -->
     
     </p-toolbar>
 </div>
